--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,24 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .DS_Store
+
+# Cypress specific
+/cypress/screenshots/
+/cypress/videos/
+
+# Cypress generated files
+/cypress/results/
+/cypress/logs/
+/cypress/.cache/
+
+# Node.js dependencies
+/node_modules/
+
+# IDE specific
+.vscode/
+
+# Environment specific
+.env
+
+# Miscellaneous
+.DS_Store
