--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Build
       run: |
-       ./node_modules/.bin/cypress install,
+       node_modules/.bin/cypress install,
        npm run start
