--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,15 +13,23 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: e2e Tests
+        uses: cypress-io/github-action@v2
+        with:
+          build: npm run start
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+         node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-       node_modules/.bin/cypress install,
-       npm install,
-       npm run start
+      - name: Build
+        run: |
+         node_modules/.bin/cypress install,
+         npm install,
+         npm run start
