--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -10,17 +10,18 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
-      - name: e2e Tests
-        uses: cypress-io/github-action@v2
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
         with:
-          node-version: 16
+          build: npm run build
+          start: npm start
 
       - name: Build
         run: |
