--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,8 +21,7 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           build: npm run build
-          start: npm install
-         # start: npm start
+          start: npm start
 
       - name: Build
         run: |
