--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -5,28 +5,11 @@ on:
   - cron: "10 * * * *"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
-        with:
-          build: npm run build
-          start: npm start
-      - name: Check working directory
-        run: pwd
-
-      - name: Build
-        run: |
-         npm install,
-         node_modules/.bin/cypress install
-         npm run start
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Run Cypress tests
+        run: npx cypress run
