--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Install dependencies
-        run: npm install --prefix Bari-Autom/package.json
+        run: npm ci --prefix Bari-Autom
+
       - name: Run Cypress tests
         run: npx cypress run
