--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm ci --prefix Bari-Autom
+        run: npm install --prefix Bari-Autom
 
       - name: Run Cypress tests
         run: npx cypress run
