--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,3 +13,6 @@ jobs:
         run: npm install
       - name: Run Cypress tests
         run: npx cypress run
+env:
+    using: 'node16'
+    main: 'main.js'
